--- a/css/custom.css
+++ b/css/custom.css
@@ -64,3 +64,12 @@
 .red{
   color: red;
 }
+
+input[type="number"]::-webkit-outer-spin-button, 
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
